<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F6CE"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/editDietTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/editDietTextView"
            android:textSize="25sp"
            android:textColor="#0404B4"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/feastNameTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/feastNameText"
                android:textColor="#00FF40" />

            <EditText
                android:id="@+id/dietNameEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/feastNameView"
                android:inputType="text"
                android:textColor="#00FF40"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/menuTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/menuText"
                android:textColor="#00FF40"  />

            <EditText
                android:id="@+id/menuEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/menuView"
                android:inputType="text" 
                android:textColor="#00FF40" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pickDayTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pickDayTextView" 
            android:textColor="#00FF40" />

        <EditText
                android:id="@+id/dateEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/dateEditText"
                android:inputType="text"
                android:textColor="#00FF40"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pickTimeTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pickTimeTextView" 
            android:textColor="#00FF40" />

        <EditText
                android:id="@+id/timeEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/timeEditText"
                android:inputType="text"
                android:textColor="#00FF40"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >
        <CheckBox android:id="@+id/alarmSetCheckBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/alarmCheckBox"
            android:textColor="#00FF40" />
        
        <Button android:id="@+id/updateDietChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateDietChartButton"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_custom"
            android:layout_marginBottom="30dp"
            android:textColor="#0404B4"
            android:onClick="editDiet"/>
    </LinearLayout>

</LinearLayout>