<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ishtiaq.nipa.tithi.ftflicareapp.MainActivity" >

    <item
        android:id="@+id/action_edit_profile"
        android:orderInCategory="100"
        android:title="@string/action_edit_profile"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_create_diet"
        android:orderInCategory="100"
        android:title="@string/action_create_diet"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_edit_diet"
        android:orderInCategory="100"
        android:title="@string/action_edit_diet"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_diet_history"
        android:orderInCategory="100"
        android:title="Diet History"
        android:showAsAction="never"/>
</menu>
