<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_screen">
    
    <TextView android:id="@+id/textIcare"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:text="@string/textIcare"
	        android:textSize="42sp"
	        android:textColor="#FF8000"
	        android:gravity="center"
	        android:textStyle="bold"
	        android:fontFamily="sans-serif-medium"
	        android:layout_weight="1.5"/>
        
        <TextView android:id="@+id/textHeaderFirstLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textHeaderFirstLine"
            android:textSize="20sp"
            android:textColor="#00FF40"
            android:gravity="center"/>
        
        <TextView android:id="@+id/textHeaderSecondLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textHeaderSecondLine"
            android:textSize="20sp"
            android:textColor="#00FF40"
            android:gravity="center"/>
        
        <TextView android:id="@+id/textHeaderThirdtLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textHeaderThirdLine"
            android:textSize="20sp"
            android:textColor="#00FF40"
            android:gravity="center"/>
        
    	
    	<TextView android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="10"/>

</LinearLayout>