<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:background="#E3F6CE" >

    <ImageView
        android:id="@+id/activeAlermImage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/bell"
        android:padding="8dp"
        android:contentDescription="@string/textIcare"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/feastNameText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/feastNameText" 
                android:textSize="20sp"
                android:textColor="#00FF40"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/feastTimeText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/feastTimeText" 
                android:textSize="25sp"
                android:textColor="#FF8000"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/menuText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/menuText" 
                android:textSize="17sp"
                android:textColor="#00FF40"/>

            <TextView
                android:id="@+id/menuView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text=""
                android:textColor="#FF8000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>